# NFI_Engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.ko.md  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: exchange-test-report.yml
.github/workflows/: ci.yml
.omo/: boulder.json
.omo/plans/: nfi-engine.md
.omo/start-work/: ledger.jsonl
brainstorming/: 2026-06-12_IMPLEMENTATION_SUMMARY.md  2026-06-14_M25_ACTION_QUEUE_IMPLEMENTATION.md  2026-06-22_RC_STATUS.md  2026-06-24_RC_STATUS.md  NFI_Engine.md
docs/: backup.md  circuit-breakers.md  contributing.md  docker.md  exchange-support-matrix.md  freqtrade-feature-coverage.md  nfi-x7-compatibility.md  notifications.md  operations.md  pairlist.md  performance.md  plugins.md  reconciliation.md  release-notes-v0.1.0-rc1.md  release-notes-v0.1.0-rc2.md  release-notes-v0.1.0-rc3.md  release-status.md  release-wording.md  reproducibility.md  safety.md  sandbox.md  simulator.md  ui.md
docs/compatibility/: nfi.json  nfi.md
examples/: docker.env.example  futures-paper.yaml  spot-paper.yaml  x7-futures-paper.yaml
frontend/: index.html  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  fallbacks.ts  hooks.ts  i18n.ts  main.tsx  styles.css  types.ts
scripts/: benchmark_m2.sh  browser_qa_deps.sh  browser_qa_runtime.mjs  browser_qa_t10.mjs  browser_qa_t10_artifacts.mjs  browser_qa_t10_failure_probes.mjs  browser_qa_t10_runtime.mjs  browser_qa_t10_security_audit.mjs  browser_qa_t10_setup_flow.mjs  browser_qa_t10_setup_helpers.mjs  browser_qa_t23_runtime_control.mjs  browser_qa_t23_runtime_flows.mjs  browser_qa_t23_wallet.mjs  browser_qa_t24_data_lifecycle.mjs  browser_qa_t24_data_lifecycle_flow.mjs  browser_qa_t25_audit.mjs  browser_qa_t25_interaction_tools.mjs  browser_qa_t25_interactions.mjs  browser_qa_t25_locale.mjs  browser_qa_t25_settings_interactions.mjs  browser_qa_t25_visual_i18n.mjs  final_smoke.sh  install.sh  pi4_rc_profile.sh  pi4_soak.sh  quality_gate.sh  release_wording_scan.py  testnet_credential_probe.sh  uninstall.sh  verify_plan_evidence.py  x7_provenance.py
src/nfi_engine/: AGENTS.md  __init__.py  cli.py  cli_backtest.py  cli_backup.py  cli_benchmark.py  cli_circuit_breaker.py  cli_compat.py  cli_config.py  cli_data.py  cli_db.py  cli_domain.py  cli_exchange.py  cli_exchange_capabilities.py  cli_exchange_lifecycle.py  cli_exchange_live_canary.py  cli_exchange_runtime.py  cli_exchange_testnet.py  cli_logs.py  cli_notify.py  cli_pairlist.py  cli_paper.py  (+11 more)
tests/: AGENTS.md
(+560 files in other folders)
