[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfi-engine"
version = "0.1.0"
description = "Original modular crypto trading engine for NFI-style strategy research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.13.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "polars>=1.41.2",
    "pydantic>=2.12",
    "pydantic-settings>=2.10",
    "rich>=13.9.4",
    "sqlalchemy[asyncio]>=2.0",
    "typer>=0.16.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
nfi-engine = "nfi_engine.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.21",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-randomly>=3.15",
    "ruff>=0.8",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "none"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportUnnecessaryComparison = "none"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D203",
    "D213",
    "D107",
    "FBT001",
    "FBT002",
    "FIX002",
    "ISC001",
    "TD002",
    "TD003",
    "TC001",
    "TC003",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "D",
    "INP001",
    "PLR2004",
    "S101",
    "S603",
    "SLF001",
]
"src/nfi_engine/cli_benchmark.py" = ["PLR0913"]
"src/nfi_engine/cli_setup.py" = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
